force-app/main/default/objects/Account_Number__c/Account_Number__c.object-meta.xml
<CustomObject>
    <label>Account Number</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>