force-app/main/default/objects/Account_Number__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Holder</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipName>Account_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>